# clyderos2

./: .gitignore  .gitmodules  README.md  ros2.repos  setup.sh
.devcontainer/: Dockerfile  ament_flake8.ini  devcontainer.json  initial-params.sh  repos_to_submodules.py  requirements.txt
clyde_bringup/: package.xml  setup.cfg  setup.py
clyde_control/: package.xml  setup.cfg  setup.py
clyde_description/: CMakeLists.txt  (+1 more)
src/clyde_description/: CMakeLists.txt  package.xml
src/clyde_description/launch/: bringup_launch.py  clyde_display.launch.py  clyde_in_world.launch.py  clyde_in_world.py  clyde_launch_all.launch.py  clyde_sim.launch.py  clyde_sim_test.launch.py  display.launch.py  launch_from_bringup.py  rviz_launch.py  spawn_clyde.launch.py  spawn_clyde_in_world.launch.py  spawn_clyde_test.launch.py  world_gazebo.launch.py
src/clyde_description/rviz/: clyde_config.rviz  test_config.rviz  urdf_config.rviz  urdf_gazebo_config.rviz
src/clyde_description/src/description/: clyde_description.urdf
src/clyde_description/src/maps/: map.bt  map.yaml  test-realm1.pgm  test-realm1.yaml
src/clyde_description/src/models/clyde_model/: model.config  model.sdf
src/clyde_description/src/params/: nav2_params.yaml
src/clyde_description/src/urdf/: clyde.gazebo  clyde.trans  clyde.urdf  clyde.xacro  clyde_cam.xacro  clyde_simple.gazebo  clyde_simple.trans  clyde_simple.urdf  clyde_simple.xacro  clyde_simple_without_xacro.urdf  materials.urdf  materials.xacro
src/clyde_description/src/worlds/: new-env0  new-env1  test-env0  test-env1  test-env2  test-realm1  world-env0
(+44 files in other folders)
